--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
+asgiref==3.2.10
+astroid==2.4.2
+autopep8==1.5.4
+colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.1
-gunicorn==20.0.4
-psycopg2-binary==2.8.5
-whitenoise==5.2.0
+django-colorfield==0.3.2
 django-heroku==0.3.1
-
+django-phonenumber-field==5.0.0
+django-template-debug==0.3.5
+gunicorn==20.0.4
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+phonenumberslite==8.12.8
+Pillow==7.2.0
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
+pycodestyle==2.6.0
+pytz==2020.1
+six==1.15.0
+sqlparse==0.3.1
+toml==0.10.1
+whitenoise==5.2.0
+wrapt==1.12.1
