--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\MOISES\\envs\\my_django_env\\Scripts\\python.exe",
-    "python.linting.pylintArgs": ["--load-plugins", "pylint_django"] //agregar para cargar el modulo apropiado de linting
+    "python.linting.pylintArgs": [
+        "--load-plugins",
+        "pylint_django"
+    ] //agregar para cargar el modulo apropiado de linting
 }
